<?xml version="1.0"?>
<package format="2">
  <name>float_array_to_pc2</name>
  <version>0.0.0</version>
  <description>The float_array_to_pc2 package</description>

  <maintainer email="kajanan@todo.todo">kajanan</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv</depend>
  <depend>pcl_conversions</depend>
</package>
