<?xml version="1.0"?>
<package format="2">
  <name>load_waypoints</name>
  <version>3.1.1</version>
  <description>The load_waypoints package</description>

  <maintainer email="trudie.cheung@mail.utoronto.ca">Trudie Cheung</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>

    <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>