<?xml version="1.0"?>
<package format="2">
  <name>motor_control</name>
  <version>1.0.0</version>
  <description>The motor_control package</description>
  <maintainer email="utra-art@todo.todo">utra-art</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>

</package>
