<?xml version="1.0"?>
<package format="2">
  <name>motor_odom</name>
  <version>0.0.0</version>
  <description>The motor_odom package</description>

  <maintainer email="utra-art@todo.todo">utra-art</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  
</package>
