<?xml version="1.0"?>
<package format="2">
  <name>odom</name>
  <version>0.0.0</version>
  <description>The odom package</description>

  <maintainer email="erick@todo.todo">erick</maintainer>
  
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robot_localization</build_depend>

  <build_export_depend>robot_localization</build_export_depend>

  <exec_depend>robot_localization</exec_depend>
</package>

