<?xml version="1.0"?>
<package format="2">
  <name>description</name>
  <version>0.0.0</version>
  <description>The description package</description>

  <maintainer email="kajanan@todo.todo">kajanan</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>stereo_image_proc</depend>
  <depend>rtabmap_ros</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>

