<?xml version="1.0"?>
<package format="2">
  <name>laser_filter</name>
  <version>0.0.0</version>
  <description>The laser filter package</description>

  <maintainer email="trudie.cheung@gmail.com">toodie</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>laser_filters</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>